--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,15 +1,15 @@
 .card1 {
     width: 100%;
-    height: 800px; 
+    height: 800px;
     background-size: cover;
     background-position: center;
     overflow: hidden;
   }
   
-  /* .card-content1 {
+  .card-content1 {
     padding: 16px;
     background-color: rgba(255, 255, 255, 0.8);
-  } */
+  }
   
   .card-title1 {
     font-size: 1.5rem;
