--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,6 @@
 .card1 {
     width: 100%;
-    height: 800px;
+    /* height: 800px; */
     background-size: cover;
     background-position: center;
     overflow: hidden;
