--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,63 +1,77 @@
 .navbar-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #f0f0f0;
-    /* margin-bottom: 20px; */
-  }
-  
-  .card {
-    width: 100%;
-  }
-  
-  .card-image {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-  }
-  
-  
-  .card-description {
-    font-size: 1rem;
-    color: #666;
-  }
-  
-  .navbar {
-    width: 100%;
-    height: 65px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .nav-menu {
-    list-style-type: none;
-    display: flex;
-    margin-left: 80px;
-    align-items: center;
-  }
-  
-  .nav-menu li {
-    margin: 0 10px;
-  }
-  
-  .nav-menu li a {
-    text-decoration: none;
-    color: #333;
-  }
-  
-  .login-button button {
-    padding: 8px 16px;
-    height: 45px;
-    width: 120px;
-    background-color: #334870;
-    color: white;
-    border: none;
-    cursor: pointer;
-    margin-right: 130px;
-  }
-  
-  .login-button button:hover {
-    background-color: #0056b3;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f0f0f0;
+}
+
+.card {
+  width: 100%;
+}
+
+.card-image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.down-arrow {
+  width: 12px;
+}
+
+.right-arrow {
+  margin-left: 10px;
+  width: 12px;
+}
+
+.card-description {
+  font-size: 1rem;
+  color: #666;
+}
+
+.navbar {
+  width: 100%;
+  height: 65px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px; /* Adjusted padding for better spacing */
+}
+
+.nav-menu {
+  list-style-type: none;
+  display: flex;
+  margin-left: 80px;
+  align-items: center;
+}
+
+.nav-menu li {
+  margin: 0 10px;
+}
+
+.nav-menu li a {
+  text-decoration: none;
+  color: #333;
+  border-bottom: 2px solid transparent;
+  transition: border-color 0.3s ease;
+}
+
+.nav-menu li a:hover {
+  color: #0056b3;
+  border-color: #0056b3;
+}
+
+.login-button button {
+  padding: 8px 16px;
+  height: 45px;
+  width: 120px;
+  background-color: #334870;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-right: 20px; /* Reduced margin for better alignment */
+}
+
+.login-button button:hover {
+  background-color: #0056b3;
+}
