--- a/src/features/Landing.css
+++ b/src/features/Landing.css
@@ -1,50 +1,82 @@
+.title-text {
+    position: absolute;
+    width: 800px;
+    height: 180px;
+    top: 380px;
+    left: 120px;
+  }
+
+  .nav-buttons {
+    position: absolute;
+    width: 124px;
+    height: 56px;
+    display: flex;
+    gap: 12px;
+    top: 500px; 
+    right: 100px; 
+    transform: translateX(-50%);
+  }
+  
+  .nav-button {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+  }
+  
+  .left-nav, .right-nav {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
 .ncard-content {
-    width: 86%;
-    height: auto;
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    margin: 100px auto;
-    gap: 50px;
-  }
-  
-  .top-ncard {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    gap: 180px;
-    align-items: center;
-  }
-  
-  .title-image {
-    height: auto;
-    width: 100%;
-    max-width: 270px;
-    margin-right: 20px;
-  }
-  
-  .text-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .text {
-    margin: 0;
-    font-size: 24px;
-    color: #1D1D1DB2;
-    text-align: left;
-  }
-  
-  .bottom-ncard {
+  width: 86%;
+  height: auto;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  margin: 100px auto;
+  gap: 50px;
+}
+
+.top-ncard {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 180px;
+  align-items: center;
+}
+
+.title-image {
+  height: auto;
+  width: 100%;
+  max-width: 270px;
+  margin-right: 20px;
+}
+
+.text-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.text {
+  margin: 0;
+  font-size: 24px;
+  color: #1d1d1db2;
+  text-align: left;
+}
+
+.bottom-ncard {
     width: 100%;
     display: flex;
     flex-direction: row;
     gap: 30px;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
   }
   
@@ -52,39 +84,46 @@
     height: auto;
     width: 100%;
     max-width: 900px;
+    object-fit: cover;
   }
   
   .cover-card {
     width: 100%;
     max-width: 380px;
-    background-color: #E3EAF7;
+    background-color: #e3eaf7;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    justify-content: space-between;
+    overflow: hidden;
   }
-
+  
   .card-head {
     position: absolute;
     top: 50px;
     left: 30px;
     width: 70%;
-    z-index: 1;
-}
-
-.cover-bg1 {
-    position: relative;
+    z-index: 2;
+  }
+  
+  .cover-bg1 {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: auto;
-}
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+  }
   
   .card-text {
     position: absolute;
     font-size: 22px;
-    z-index: 1;
-    bottom: 20px;
+    z-index: 2;
     left: 30px;
+    bottom: 30px;
   }
   
   @media (max-width: 768px) {
@@ -148,350 +187,350 @@
       transform: translateX(-50%);
       text-align: center;
     }
-  }  
+  }
+  
 
-  .newcard-content {
-    width: 86%;
-    height: 300px;
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-    margin: 100px auto;
-    position: relative;
+.newcard-content {
+  width: 86%;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  margin: 100px auto;
+  position: relative;
 }
 
 .newcard-text {
-    position: absolute;
-    top: 0;
-    left: 450px;
-    font-size: 50px;
-    z-index: 1;
-    text-align: left;
+  position: absolute;
+  top: 0;
+  left: 450px;
+  font-size: 50px;
+  z-index: 1;
+  text-align: left;
 }
 
 .insidecard-content {
-    width: 100%;
-    height: 200px;
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    gap: 7px;
-    bottom: 0;
-    left: 0;
+  width: 100%;
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  bottom: 0;
+  left: 0;
 }
 
 .process-bg {
-    height: 200px;
-    width: 17%;
+  height: 200px;
+  width: 17%;
 }
 
 @media (max-width: 1024px) {
-    .newcard-text {
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
-    }
+  .newcard-text {
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+  }
 }
 
 @media (max-width: 768px) {
-    .newcard-content {
-        height: auto;
-        margin: 50px auto;
-    }
+  .newcard-content {
+    height: auto;
+    margin: 50px auto;
+  }
 
-    .newcard-text {
-        font-size: 35px;
-        top: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
-    }
+  .newcard-text {
+    font-size: 35px;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+  }
 
-    .insidecard-content {
-        height: auto;
-        flex-direction: column;
-        align-items: center;
-        position: relative;
-        gap: 10px;
-        bottom: auto;
-    }
+  .insidecard-content {
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+    bottom: auto;
+  }
 
-    .process-bg {
-        width: 80%;
-        height: auto;
-    }
+  .process-bg {
+    width: 80%;
+    height: auto;
+  }
 }
 
 @media (max-width: 480px) {
-    .newcard-content {
-        margin: 20px auto;
-    }
+  .newcard-content {
+    margin: 20px auto;
+  }
 
-    .newcard-text {
-        font-size: 25px;
-        top: 5px;
-    }
+  .newcard-text {
+    font-size: 25px;
+    top: 5px;
+  }
 
-    .insidecard-content {
-        height: auto;
-        flex-direction: column;
-        align-items: center;
-        gap: 5px;
-    }
+  .insidecard-content {
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+  }
 
-    .process-bg {
-        width: 100%;
-        height: auto;
-    }
+  .process-bg {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .bicard {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .bicardl-content {
-    width: 50%;
-    height: 700px;
-    background-color: #49627E;
-    background-position: center;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    justify-content: center;
+  width: 50%;
+  height: 700px;
+  background-color: #49627e;
+  background-position: center;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .bicard-inside {
-    height: 500px;
-    width: 80%;
-    position: absolute;
-    top: 100px;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+  height: 500px;
+  width: 80%;
+  position: absolute;
+  top: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
 
 .bicard-text {
-    color: white;
-    font-size: 50px;
-    z-index: 1;
-    text-align: left;
+  color: white;
+  font-size: 50px;
+  z-index: 1;
+  text-align: left;
 }
 
 .para-text {
-    color: white;
-    font-size: 20px;
-    text-align: left;
+  color: white;
+  font-size: 20px;
+  text-align: left;
 }
 
 .bi-blocks {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .inside-blocks {
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
 }
 
 .bicardr-content {
-    width: 50%;
-    height: 700px;
-    position: relative;
-    background-color: #E0E8F1;
-    background-position: center;
-    overflow: hidden;
-    display: flex;
-    justify-content: center; /* Center the content horizontally */
+  width: 50%;
+  height: 700px;
+  position: relative;
+  background-color: #e0e8f1;
+  background-position: center;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .b-certificate {
-    height: 500px;
-    position: absolute;
-    top: 100px;
-    left: 150px;
+  height: 500px;
+  position: absolute;
+  top: 100px;
+  left: 150px;
 }
 
 @media (max-width: 1024px) {
-    .bicardl-content,
-    .bicardr-content {
-        width: 100%;
-        height: auto;
-    }
+  .bicardl-content,
+  .bicardr-content {
+    width: 100%;
+    height: auto;
+  }
 
-    .bicard-inside {
-        position: relative;
-        top: auto;
-        left: auto;
-        width: 90%;
-        margin: 20px auto;
-        height: auto;
-    }
+  .bicard-inside {
+    position: relative;
+    top: auto;
+    left: auto;
+    width: 90%;
+    margin: 20px auto;
+    height: auto;
+  }
 
-    .b-certificate {
-        position: relative;
-        height: auto;
-        width: 80%;
-        top: auto;
-        left: auto;
-        margin: 20px auto;
-    }
+  .b-certificate {
+    position: relative;
+    height: auto;
+    width: 80%;
+    top: auto;
+    left: auto;
+    margin: 20px auto;
+  }
 }
 
 @media (max-width: 768px) {
-    .bicard {
-        flex-direction: column;
-    }
+  .bicard {
+    flex-direction: column;
+  }
 
-    .bicardl-content,
-    .bicardr-content {
-        width: 100%;
-        height: auto;
-    }
+  .bicardl-content,
+  .bicardr-content {
+    width: 100%;
+    height: auto;
+  }
 
-    .bicard-inside {
-        width: 90%;
-        height: auto;
-        margin: 20px auto;
-    }
+  .bicard-inside {
+    width: 90%;
+    height: auto;
+    margin: 20px auto;
+  }
 
-    .bicard-text {
-        font-size: 35px;
-        text-align: center;
-    }
+  .bicard-text {
+    font-size: 35px;
+    text-align: center;
+  }
 
-    .para-text {
-        font-size: 18px;
-        text-align: center;
-    }
+  .para-text {
+    font-size: 18px;
+    text-align: center;
+  }
 
-    .bi-blocks {
-        align-items: center;
-    }
+  .bi-blocks {
+    align-items: center;
+  }
 
-    .inside-blocks {
-        justify-content: center;
-    }
+  .inside-blocks {
+    justify-content: center;
+  }
 
-    .b-certificate {
-        width: 100%;
-        height: auto;
-        position: relative;
-        top: auto;
-        left: auto;
-        margin: 20px 0;
-    }
+  .b-certificate {
+    width: 100%;
+    height: auto;
+    position: relative;
+    top: auto;
+    left: auto;
+    margin: 20px 0;
+  }
 }
 
 @media (max-width: 480px) {
-    .bicard-inside {
-        width: 95%;
-    }
+  .bicard-inside {
+    width: 95%;
+  }
 
-    .bicard-text {
-        font-size: 30px;
-    }
+  .bicard-text {
+    font-size: 30px;
+  }
 
-    .para-text {
-        font-size: 16px;
-    }
+  .para-text {
+    font-size: 16px;
+  }
 }
 
-.top-scard{
-    width: 100%;
-    height: 300px; 
-    display: flex;
-    flex-direction: row;
-    gap: 18px;
+.top-scard {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  gap: 18px;
 }
 
 .tscard1 {
-    width: 33%;
-    height: 300px;
-    background-color: white;
-    position: relative; 
-  }
-
-  .hcard-text{
-    position: absolute;
-    font-size: 50px;
-    z-index: 1;
-    top: 0px;
-    left: 0px;
-    text-align: left;
-  }
-
-  .hcard-para{
-    font-size: 16px;
-  }
-
-  .tscard2 {
-    width: 33%;
-    height: 300px;
-    background-color: #7D96C7;
-    position: relative;
-  }
-
-  .tcard-text{
-    position: absolute;
-    font-size: 16px;
-    color: white;
-    z-index: 1;
-    top: 30px;
-    left: 30px;
-    text-align: left;
-  }
-  .ncard-para{
-    font-size: 28px;
-  }
-
-  .custom-button {
-    border: none;
-    cursor: pointer;
-    padding: 10px;
-    outline: none;
-    color: #fff;
-    border-radius: 50px;
-    background-color: #1F31553D;
-    font-size: 16px;
-    text-align: center;
-    position: absolute;
-    bottom: 30px;
-    left: 150px;
-  }
-
-  .tscard3{
-    width: 33%;
-    height: 300px;
-    background-color: #D4CFF3;
-    position: relative;
-    ; 
-  }
-  .card-bg1{
-    position: absolute;
-    height: 135px;
-    width: 186px;
-    bottom: 0;
-    right: 0;
+  width: 33%;
+  height: 300px;
+  background-color: white;
+  position: relative;
 }
 
-.card-bg2{
+.hcard-text {
   position: absolute;
-  height: 170px;
-  width: 150px;
+  font-size: 50px;
+  z-index: 1;
+  top: 0px;
+  left: 0px;
+  text-align: left;
+}
+
+.hcard-para {
+  font-size: 16px;
+}
+
+.tscard2 {
+  width: 33%;
+  height: 300px;
+  background-color: #7d96c7;
+  position: relative;
+}
+
+.tcard-text {
+  position: absolute;
+  font-size: 16px;
+  color: white;
+  z-index: 1;
+  top: 30px;
+  left: 30px;
+  text-align: left;
+}
+.ncard-para {
+  font-size: 28px;
+}
+
+.custom-button {
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  outline: none;
+  color: #fff;
+  border-radius: 50px;
+  background-color: #1f31553d;
+  font-size: 16px;
+  text-align: center;
+  position: absolute;
+  bottom: 30px;
+  left: 150px;
+}
+
+.tscard3 {
+  width: 33%;
+  height: 300px;
+  background-color: #d4cff3;
+  position: relative;
+}
+.card-bg1 {
+  position: absolute;
+  height: 135px;
+  width: 186px;
   bottom: 0;
   right: 0;
 }
 
-.ncard-text{
+.card-bg2 {
+  position: absolute;
+  height: 130px;
+  width: 120px;
+  bottom: 0;
+  right: 0;
+}
+
+.ncard-text {
   position: absolute;
   font-size: 16px;
   z-index: 1;
@@ -500,43 +539,288 @@
   text-align: left;
 }
 
-
-.bottom-scard{
-    width: 100%;
-    height: 300px;
-    display: flex;
-    flex-direction: row;
-    gap: 18px;
+.bottom-scard {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  gap: 18px;
 }
 
 .bscard1 {
-    width: 33%;
-    height: 300px;
-    background-color: #F3E5CF;
-    position: relative;
+  width: 33%;
+  height: 300px;
+  background-color: #f3e5cf;
+  position: relative;
+}
+
+.bscard2 {
+  width: 33%;
+  height: 300px;
+  background-color: #f3cfcf;
+  position: relative;
+}
+
+.bscard3 {
+  width: 33%;
+  height: 300px;
+  background-color: #d8f3cf;
+  position: relative;
+}
+
+.main-content {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.hcard-para {
+  font-size: 16px;
+}
+
+.bannercard {
+  margin: 40px;
+  height: 70px;
+  width: 100%;
+  max-width: 100%;
+  object-fit: contain;
+}
+
+@media (max-width: 1024px) {
+  .bannercard {
+    margin: 30px;
+    height: 60px;
+  }
+}
+
+@media (max-width: 768px) {
+  .bannercard {
+    margin: 20px;
+    height: 50px;
+  }
+}
+
+@media (max-width: 480px) {
+  .bannercard {
+    margin: 10px;
+    height: 40px;
+  }
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
+  color: white;
+}
+
+.footer-column {
+  flex: 1;
+  margin-left: 100px;
+}
+
+.footer-column h3 {
+  margin-bottom: 10px;
+  font-size: 18px;
+  text-align: left;
+}
+
+.footer-column p {
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.footer-column ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-column ul li {
+  margin-bottom: 10px;
+  font-size: 14px;
+  text-align: left;
+}
+
+.footer-column ul li a {
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer-column ul li a:hover {
+  color: #d3d3d3;
+}
+
+@media (max-width: 768px) {
+  .footer-container {
+    flex-direction: column;
+    align-items: flex-start;
   }
 
-  .bscard2 {
-    width: 33%;
-    height: 300px;
-    background-color: #F3CFCF;
-    position: relative;
+  .footer-column {
+    margin: 10px 0;
   }
 
-  .bscard3{
-    width: 33%;
-    height: 300px;
-    background-color: #D8F3CF;
-    position: relative;
+  .footer-column h3,
+  .footer-column ul li,
+  .footer-column p {
+    text-align: left;
+  }
+}
+
+.footer-links-wrapper {
+  display: flex;
+  justify-content: center;
+  margin: 40px;
+  align-items: center;
+  height: 100%;
+}
+
+.footer-links-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 50px;
+  color: white;
+}
+
+.footer-link {
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  white-space: nowrap;
+}
+
+.footer-link:hover {
+  color: #d3d3d3;
+}
+
+@media (max-width: 768px) {
+  .footer-links-container {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
   }
 
-  
-  .main-content {
-    margin-top: 50px;
-    text-align: center;
+  .footer-link {
+    margin: 5px 0;
   }
+}
+
+.video-container {
+    height: 450px;
+    margin: 100px;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.video-link {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.link-box {
+    height: 20%;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+}
+
+.link-box:hover {
+    background-color: #e0e8f1;
+}
+
+.link-text a {
+    font-size: 24px;
+    color: #000;
+    text-decoration: none;
+}
+
+.link-box:hover .link-text a {
+    text-decoration: underline;
+    color: #334870;
+}
+
+.link-ptext {
+    margin-top: 8px;
+    font-size: 15px;
+    color: #828282;
+    text-align: left;
+}
+
+.link-icon {
+    width: 27px;
+    height: 27px;
+}
+
+.link-icon-wrapper {
+    cursor: pointer;
+}
+
+.link-header {
+    height: 20%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.link-htext {
+    font-size: 50px;
+}
+
+.link-sidetxt {
+    font-size: 20px;
+    color: #104dc4;
+    text-decoration: none;
+}
 
 
-  .hcard-para{
-    font-size: 16px;
-  }
+.video-box {
+  height: 100%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.video-info {
+  font-size: 27px;
+  text-align: left;
+}
+
+.videoinfo-para {
+  font-size: 18px;
+}
+
+.video-image {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.video-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.video-image .circle {
+  position: absolute;
+  width: 110px;
+  height: 110px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
