--- a/src/features/Landing.css
+++ b/src/features/Landing.css
@@ -607,16 +607,12 @@
 }
 
 .footer-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 20px;
-  color: white;
+  padding-top: 40px;
+  padding-left: 100px;
 }
 
 .footer-column {
-  flex: 1;
-  margin-left: 100px;
+  margin-bottom: 20px;
 }
 
 .footer-column h3 {
@@ -654,8 +650,7 @@
 
 @media (max-width: 768px) {
   .footer-container {
-    flex-direction: column;
-    align-items: flex-start;
+    text-align: left;
   }
 
   .footer-column {
@@ -668,6 +663,7 @@
     text-align: left;
   }
 }
+
 
 .footer-links-wrapper {
   display: flex;
